Improve Lighthouse score

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularPlayground</title>
+  <title>Angular Playground</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+  <meta name="description" content="Angular Playground.
+  I use this place to test out web technologies with a focus on Angular 2+"/>
 </head>
 <body>
-  <pg-root></pg-root>
+  <pg-root>
+    Loading...
+  </pg-root>
 </body>
 </html>
