Refactor and enable root scss imports

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
   <meta name="msapplication-TileImage" content="assets/icons/ms-icon-144x144.png">
 
   <!-- Apple PWA hacks -->
-
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="apple-touch-startup-image" href="/angular-playground/assets/icons/apple/Icon-180.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="apple-touch-startup-image" href="assets/icons/apple/Icon-180.png">
 
 </head>
 <body>
